# valhalla

./: CMakeLists.txt  build.bat
bench/: .gitignore  analyze.py  config.py  start_bench.py
include/: valhalla.hpp  valhalla_improved.hpp
src/arrayfire/: CMakeLists.txt  inner_product.cpp  sort.cpp  transform_reduce.cpp
src/tbb/: CMakeLists.txt  inner_product.cpp  sort.cpp
src/thrust_device/: CMakeLists.txt  inner_product.cu  sort.cu  tansform_reduce.cu
src/thrust_host/: CMakeLists.txt  inner_product.cpp  reduce.cpp  saxpy.cpp  sort.cpp  transform_reduce.cpp
