GET_FILENAME_COMPONENT(parent_dir ${CMAKE_CURRENT_SOURCE_DIR} NAME)

FIND_PACKAGE(TBB REQUIRED)

INCLUDE_DIRECTORIES(${TBB_INCLUDE_DIRS})

FILE(GLOB FILES "*.cpp")

FOREACH(FILE ${FILES})
    GET_FILENAME_COMPONENT(FUNC ${FILE} NAME_WE)
    GET_FILENAME_COMPONENT(FULL_DIR_NAME ${FILE} PATH)
    GET_FILENAME_COMPONENT(DIR_NAME ${FULL_DIR_NAME} NAME)

    ADD_EXECUTABLE(tbb_${FUNC} ${FILE})
    TARGET_LINK_LIBRARIES(tbb_${FUNC} PRIVATE TBB::tbb)
    SET_TARGET_PROPERTIES(tbb_${FUNC} PROPERTIES OUTPUT_NAME ${FUNC}_tbb)

    SET_TARGET_PROPERTIES(tbb_${FUNC}
                          PROPERTIES
                          RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/${parent_dir})
ENDFOREACH()
