GET_FILENAME_COMPONENT(parent_dir ${CMAKE_CURRENT_SOURCE_DIR} NAME)

SET(THRUST_HOST_SYSTEMS OMP TBB CPP)

FIND_PACKAGE(OpenMP)
IF(OPENMP_FOUND)
    SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
ENDIF()
FIND_PACKAGE(tbb REQUIRED)

FOREACH(THRUST_HOST_SYSTEM ${THRUST_HOST_SYSTEMS})
    # Collect the source
    FILE(GLOB FILES "*.cpp")

    FOREACH(FILE ${FILES})
        GET_FILENAME_COMPONENT(FUNC ${FILE} NAME_WE)
        GET_FILENAME_COMPONENT(FULL_DIR_NAME ${FILE} PATH)
        GET_FILENAME_COMPONENT(DIR_NAME ${FULL_DIR_NAME} NAME)

        ADD_EXECUTABLE(thrust_${FUNC}_${THRUST_HOST_SYSTEM} ${FILE})

        TARGET_COMPILE_DEFINITIONS(thrust_${FUNC}_${THRUST_HOST_SYSTEM} PRIVATE THRUST_HOST_SYSTEM=THRUST_HOST_SYSTEM_${THRUST_HOST_SYSTEM})

        STRING(TOLOWER ${THRUST_HOST_SYSTEM} lower_case_thrust_host_system)
        SET_TARGET_PROPERTIES(thrust_${FUNC}_${THRUST_HOST_SYSTEM}
                            PROPERTIES
                            OUTPUT_NAME ${FUNC}_${lower_case_thrust_host_system})

                            
        
        IF (THRUST_HOST_SYSTEM STREQUAL TBB)
            TARGET_LINK_LIBRARIES(thrust_${FUNC}_${THRUST_HOST_SYSTEM} PRIVATE TBB::tbb)
        ENDIF()

        # Output Directory
        SET_TARGET_PROPERTIES(thrust_${FUNC}_${THRUST_HOST_SYSTEM}
                              PROPERTIES
                              RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/${parent_dir})

    ENDFOREACH()

ENDFOREACH()